--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,17 @@
 h1{
-    font-size: 20px;
-    color: red;
+   
+    color: #000;
+}
+
+h1 span{
+    color:#037bc0 ;
+}
+
+
+nav a{
+    text-transform: uppercase;
+}
+.navegacion a
+{
+    background-color: aqua;
 }
