--- a/css/app.css
+++ b/css/app.css
@@ -9,6 +9,9 @@ a{
     text-decoration: none;
     color:#000;
 }
+img{
+    max-width: 100%;
+}
 .contenedor
 {
     max-width: 1200px;
@@ -21,20 +24,27 @@ a{
     margin: 50 0 50 0;   
     text-align: center;
 }
-
+.nombre-sitio span{
+    color: #037bc0;
+}
 .contenedor-navegacion{
     border-top: 1px solid #e1e1e1;
 }
 .nav-principal{
- padding: 20px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px 0;
 }
 
 .hero{
     background-image: url('../img/principal.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 550px;
-    
+    height: 550px;   
 }
-
-/** Box Model **/
+.listado-categorias{
+    display: grid;
+    grid-template-columns:repeat(3,1fr);
+    gap: 20px;
+}
