--- a/css/app.css
+++ b/css/app.css
@@ -1,50 +1,101 @@
-html{
-    box-sizing: border-box;
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; /* 1 rem es = 10 px */
 }
-*, *:before, *:after{
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+body {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.6rem;
+  line-height: 2;
 }
 /** Globales **/
-a{
-    text-decoration: none;
-    color:#000;
-}
-img{
-    max-width: 100%;
-}
-.contenedor
-{
-    max-width: 1200px;
-    margin: 0 auto 0 auto;
+h1,
+h2,
+h3 {
+  font-family: "Playfair Display", serif;
+  margin: 0 0 5rem 0;
 }
 
+h1 {
+  font-size: 5rem;
+}
+h2 {
+  font-size: 3rem;
+}
+h3 {
+  font-size: 3rem;
+}
+a {
+  text-decoration: none;
+  color: #000;
+}
+img {
+  max-width: 100%;
+  display: block;
+}
+.contenedor {
+  max-width: 120rem;
+  margin: 0 auto 0 auto;
+}
 
 /** Header y navegación **/
-.nombre-sitio{
-    margin: 50 0 50 0;   
-    text-align: center;
+.nombre-sitio {
+  margin-top: 5rem;
+  text-align: center;
 }
-.nombre-sitio span{
-    color: #037bc0;
+.nombre-sitio span {
+  color: #037bc0;
 }
-.contenedor-navegacion{
-    border-top: 1px solid #e1e1e1;
+.contenedor-navegacion {
+  border-top: 1px solid #e1e1e1;
 }
-.nav-principal{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 20px 0;
+.nav-principal {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px 0;
 }
 
-.hero{
-    background-image: url('../img/principal.jpg');
+.hero {
+  background-image: url("../img/principal.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 550px;
+}
+/** Categorias **/
+.categorias{
+    padding-top: 5rem;
+}
+.categorias h2 {
+  text-align: center;
+}
+.listado-categorias {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+.categoria a {
+  display: block;
+  text-align: center;
+  padding: 20px;
+  font-size: 20px;
+}
+.categoria a:hover {
+  background-color: #037bc0;
+  color: #fff;
+  border-bottom-right-radius: 10px;
+}
+/**Sobre nosotros **/
+.sobre-nosotros{
+    background-image: linear-gradient(to right, transparent 50%, #037bc0 50%,#037bc0 100% ), url(../img/nosotros.jpg);
+    padding: 10rem 0;
+    background-position: left center;
     background-repeat: no-repeat;
-    background-size: cover;
-    height: 550px;   
+    background-size: 100%, 120rem;
 }
-.listado-categorias{
-    display: grid;
-    grid-template-columns:repeat(3,1fr);
-    gap: 20px;
-}
+.sobre-nosotros
