--- a/css/app.css
+++ b/css/app.css
@@ -98,4 +98,72 @@ img {
     background-repeat: no-repeat;
     background-size: 100%, 120rem;
 }
-.sobre-nosotros
+.sobre-nosotros-grid{
+  display: flex;
+  justify-content: end;
+}
+.texto-nosotros{
+  flex-basis: 50%;
+  padding-left: 10rem;
+  color: #fff;
+}
+
+/** Listado de productos **/
+.contenido-principal
+{
+  padding-top: 5rem;
+}
+
+.producto{
+  background-color: #037bc0;
+}
+
+.texto-producto{
+  text-align: center;
+  color:#fff;
+  padding: 2rem;
+}
+.texto-producto .precio {
+  font-size:2.8rem ;
+  font-weight: 900;
+}
+.texto-producto h3{
+  margin: 0;
+}
+
+
+.texto-producto p{
+  margin: 0 0 .5rem 0;
+}
+
+
+
+
+
+/** Utilidades */
+
+.text-center{
+  text-align: center;
+}
+
+.btn{
+  display: block;
+  background-color: #8cbc00;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 900;
+  padding: 1rem;
+  transition: background-color .3s ease-out ;
+}
+
+.btn:hover{
+  background-color: #769c02;
+}
+
+.listado-productos{
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
+}
+.listado-productos {
+
+}
