--- a/css/app.css
+++ b/css/app.css
@@ -163,7 +163,88 @@ img {
 .listado-productos{
   display: grid;
   grid-template-columns: repeat(6,1fr);
+  column-gap: 2rem;
+  row-gap: 2rem;
 }
-.listado-productos {
+.producto:nth-child(1)
+{
+  grid-column-start: 1;
+  grid-column-end: 7;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+.producto:nth-child(1) img{
+  height: 43rem;
+  width: 100%;
+  object-fit: cover;
+}
 
+.producto:nth-child(2)
+{
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+.producto:nth-child(2) img, 
+.producto:nth-child(3) img{
+  height: 30rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+.producto:nth-child(3)
+{
+  grid-column-start: 4;
+  grid-column-end: 7;
+}
+
+.producto:nth-child(4)
+{
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+.producto:nth-child(5)
+{
+  grid-column-start: 3;
+  grid-column-end: 5;
+}
+.producto:nth-child(6)
+{
+  grid-column-start: 5;
+  grid-column-end: 7;
+}
+
+/** Footer **/
+.site-footer
+{
+  border-top: 1px solid #e1e1e1;
+  margin-top: 5rem;
+  padding-top: 5rem;
+}
+/*
+.grid-footer{
+  Flexbox 
+  display: flex;
+  gap: 2rem;
+}
+.grid-footer div{
+  flex: 1;
+}
+*/
+.grid-footer{
+  display: grid;
+  grid-template-columns: repeat(3 ,1fr);
+  gap: 2rem;
+}
+.site-footer h3{
+  margin-bottom: .5rem;
+}
+
+.footer-menu a{
+  display: block;
+}
+
+.reserv{
+  margin-top: 5rem;
+  text-align: center;
+  font-weight: bold;
 }
