Se termino el apartado (Nosotros, Tienda, Blog, Galeria), Contancto queda pendiente, se construyo el formulario falta aplicar estilos

--- a/css/app.css
+++ b/css/app.css
@@ -59,6 +59,10 @@ img {
   justify-content: space-between;
   padding: 20px 0;
 }
+.nav-principal a:hover{
+  background-color: #037bc0;
+  color: #fff;
+}
 
 .hero {
   background-image: url("../img/principal.jpg");
@@ -141,6 +145,9 @@ img {
 
 
 /** Utilidades */
+.max-width-30{
+  max-width: 30rem;
+}
 
 .text-center{
   text-align: center;
@@ -154,6 +161,7 @@ img {
   font-weight: 900;
   padding: 1rem;
   transition: background-color .3s ease-out ;
+  text-align: center;
 }
 
 .btn:hover{
@@ -247,4 +255,62 @@ img {
   margin-top: 5rem;
   text-align: center;
   font-weight: bold;
+}
+
+/** Nosotros */
+.contenido-nosotros{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-columns: repeat(auto-fit, minmax(25rem,1fr));
+  gap: 4rem;
+}
+.informacion-nosotros{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+/** Blog*/
+.contenedor-blog{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  column-gap: 4rem;
+}
+.entrada{
+  border-bottom: 2px solid #e1e1e1;
+  padding-bottom: 4rem;
+  margin-bottom: 2rem;
+}
+.entrada:last-of-type{
+  border: none;
+}
+.entrada-meta{
+  display: flex;
+  justify-content: space-between;
+}
+.entrada-meta p{
+  font-weight: 700;
+  
+}
+.entrada-meta span{
+  color: #037bc0;
+}
+.contenido-entrada-blog
+{
+  width: 60rem;
+  margin: auto;
+}
+/** Galeria*/
+.galeria{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+.galeria img{
+  height: 40rem;
+  width: 40rem;
+  object-fit: cover;
 }
