Maquetado completo al 100%

--- a/css/app.css
+++ b/css/app.css
@@ -162,10 +162,12 @@ img {
   padding: 1rem;
   transition: background-color .3s ease-out ;
   text-align: center;
+  border: none;
 }
 
 .btn:hover{
   background-color: #769c02;
+  cursor: pointer;
 }
 
 .listado-productos{
@@ -314,3 +316,43 @@ img {
   width: 40rem;
   object-fit: cover;
 }
+
+/** Formulario **/
+.formulario{
+  width: 60rem;
+  margin: 0 auto;
+}
+.formulario fieldset{
+  border: 1px solid #000;
+  margin-bottom: 2rem;
+}
+.formulario legend
+{
+  background-color: #037bc0;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 900;
+  padding: 1rem;
+  margin-bottom: 4rem;
+}
+.campo{
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+.campo label{
+  flex-basis: 10rem;
+}
+
+.campo input[type="text"],
+.campo input[type="tel"],
+.campo input[type="email"],
+.campo textarea,
+.campo select{
+  flex: 1;
+  border: 1px solid #e1e1e1;
+  padding: 1rem;
+}
+
