--- a/css/app.css
+++ b/css/app.css
@@ -296,6 +296,7 @@ img {
   transition: background-color .3s ease-out ;
   text-align: center;
   border: none;
+  width: 100%;
 }
 
 .btn:hover{
@@ -320,17 +321,37 @@ img {
   flex: 1;
 }
 */
-.grid-footer{
-  display: grid;
-  grid-template-columns: repeat(3 ,1fr);
-  gap: 2rem;
+
+@media (min-width: 768px){ 
+  .btn{
+    width: auto;
+  }
+  .site-footer h3{
+    text-align: left;
+  }
+  .grid-footer{
+    display: grid;
+    grid-template-columns: repeat(3 ,1fr);
+    gap: 2rem;
+  }
+  .footer-menu a{
+    text-align: left;
+  }
+  .grid-footer div{
+    margin-bottom: 0;
+  }
+}
+.grid-footer div{
+  margin-bottom: 2rem;
 }
 .site-footer h3{
   margin-bottom: .5rem;
+  text-align: center;
 }
 
 .footer-menu a{
   display: block;
+  text-align: center;
 }
 
 .reserv{
@@ -350,26 +371,46 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 5rem;
 }
 
-/** Blog*/
-.contenedor-blog{
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  column-gap: 4rem;
+@media (min-width: 768px){
+  .informacion-nosotros{
+    padding: 0;
+  }
+  
 }
+/** Blog*/
+@media (min-width: 768px){ 
+  .contenedor-blog{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 4rem;
+  }
+  .entrada-meta{
+    display: flex;
+    justify-content: space-between;
+  }
+  .entrada h2{
+    text-align: left !important; 
+  }
+}
+
+
 .entrada{
   border-bottom: 2px solid #e1e1e1;
   padding-bottom: 4rem;
   margin-bottom: 2rem;
+  padding:  2rem 2rem 4rem 2rem;
+}
+
+.entrada h2{
+  text-align: center;
 }
 .entrada:last-of-type{
   border: none;
 }
-.entrada-meta{
-  display: flex;
-  justify-content: space-between;
-}
+
 .entrada-meta p{
   font-weight: 700;
   
@@ -382,15 +423,23 @@ img {
   width: 60rem;
   margin: auto;
 }
-/** Galeria*/
 .galeria{
+  grid-template-columns: repeat(2, 1fr);
   list-style: none;
   padding: 0;
   margin: 0;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
+
+/** Galeria*/
+@media (min-width: 768px){ 
+  .galeria{
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+
 .galeria img{
   height: 40rem;
   width: 40rem;
@@ -399,7 +448,7 @@ img {
 
 /** Formulario **/
 .formulario{
-  width: 60rem;
+  width: 100%;
   margin: 0 auto;
 }
 .formulario fieldset{
